--- a/wws_and_jl/auth/templates/login.html
+++ b/wws_and_jl/auth/templates/login.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>TODO</title>
-  </head>
-  <body>
-    <h1>TODO</h1>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>登录</title>
+    <script src="https://cdn.staticfile.org/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+</head>
+<body>
+
+    <div>
+        <span>管理员密码：</span>
+        <input name="admin_confirm" type="password" id="admin_confirm"></input>
+    </div>
+    <div>
+        <button onclick="login()">登录</button>
+    </div>
+
+
+</body>
+<script>
+    $(document).keydown(function(e){
+        var e = window.event; 
+        if(e.keyCode==32){
+            return false;
+        }
+     });
+
+    function login(){
+        let admin_confirm = $('#admin_confirm').val()  // 取出用户密码
+        if(admin_confirm === ""){  // 用户密码为空则提示用户并返回
+            alert("密码不能为空")
+            return
+        }
+        $.ajax({
+            type: "POST",
+            url: "login",
+            data: {
+                "admin_confirm": admin_confirm
+            },
+            success: data=>{
+                if(data['flag']==0){
+                    console.log(data)
+                    alert("登录成功")
+                    $.cookie('admin_confirm',admin_confirm)
+                    window.location.href = "main.html"
+                }else{
+                    alert("密码错误")
+                }
+            }
+        })
+    }
+</script>
+
+
 </html>
