--- a/wws_and_jl/auth/templates/login.html
+++ b/wws_and_jl/auth/templates/login.html
@@ -21,9 +21,12 @@
 <script>
     $(document).keydown(function(e){
         var e = window.event; 
-        if(e.keyCode==32){
+        if(e.keyCode == 32){
             return false;
         }
+        if(e.keyCode == 13){
+            login()
+        }
      });
 
     function login(){
