--- a/wws_and_jl/collect/templates/stream.html
+++ b/wws_and_jl/collect/templates/stream.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Video Streaming Demonstration</h1>
-    <img src="{{ url_for('video_feed') }}">
+    <img src="{{ url_for('collect.video_feed') }}">
 </body>
 
 </html>
