--- a/wws_and_jl/auth/templates/login.html
+++ b/wws_and_jl/auth/templates/login.html
@@ -1,33 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>登录</title>
-    <script src="https://cdn.staticfile.org/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://cdn.staticfile.org/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>登录</title>
+  <!-- //todo 配置静态文件 -->
+  <link href="static/bootstrap.css" rel="stylesheet">
+  <link href="static/login.css" rel="stylesheet">
+  <!-- //todo 配置静态文件 -->
+  <script src="https://cdn.staticfile.org/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://cdn.staticfile.org/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 </head>
 
-<body>
-
-    <div>
-        <span>管理员密码：</span>
-        <input name="admin_confirm" type="password" id="admin_confirm"></input>
-    </div>
-    <div>
-        <button onclick="login()">登录</button>
-    </div>
-
-
+<body class="text-center">
+  <form class="form-signin">
+    <h1 class="h3 mb-3 font-weight-normal">管理员密码</h1>
+    <label for="admin_confirm" class="sr-only">请输入管理员密码</label>
+    <input type="password" name="admin_confirm" id="admin_confirm"  class="form-control" placeholder="Password" required>
+    <button class="btn btn-lg btn-primary btn-block" onclick="login()">Sign in</button>
+  </form>
 </body>
 <script>
     $(document).keydown(function (e) {
-        var e = window.event;
         if (e.keyCode == 32) {
             return false;
-        }
-        if (e.keyCode == 13) {
-            login()
         }
     });
 
@@ -56,6 +53,5 @@
         })
     }
 </script>
-
 
 </html>
