--- a/wws_and_jl/collect/templates/main.html
+++ b/wws_and_jl/collect/templates/main.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>主界面</title>
 </head>
+
 <body>
-登录到主界面
+    登录到主界面
+    TODO: 显示三个按钮，一个跳转到记录显示页面，一个跳转到视频查看页面，还有一个logout（登出）绑定到/auth/logout
 </body>
+
 </html>
