--- a/wws_and_jl/auth/templates/login.html
+++ b/wws_and_jl/auth/templates/login.html
@@ -14,17 +14,21 @@
 </head>
 
 <body class="text-center">
-  <form class="form-signin">
+  <div class="form-signin">
     <h1 class="h3 mb-3 font-weight-normal">管理员密码</h1>
     <label for="admin_confirm" class="sr-only">请输入管理员密码</label>
     <input type="password" name="admin_confirm" id="admin_confirm"  class="form-control" placeholder="Password" required>
     <button class="btn btn-lg btn-primary btn-block" onclick="login()">Sign in</button>
-  </form>
+  </div>
 </body>
 <script>
     $(document).keydown(function (e) {
         if (e.keyCode == 32) {
             return false;
+        }
+        if (e.keyCode == 13) {
+            login()
+            return true;
         }
     });
 
