--- a/wws_and_jl/collect/templates/main.html
+++ b/wws_and_jl/collect/templates/main.html
@@ -4,11 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <title>主界面</title>
+    <script src="https://cdn.staticfile.org/jquery/3.4.0/jquery.min.js"></script>
 </head>
 
 <body>
     登录到主界面
-    TODO: 显示三个按钮，一个跳转到记录显示页面，一个跳转到视频查看页面，还有一个logout（登出）绑定到/auth/logout
-</body>
+    TODO: 显示一个按钮，跳转到记录显示页面
+    <div>
+        <form action="/auth/logout" method="get">
+             <button type="submit">退出</button>
+        </form>
+    </div>
+    <div>
+        <a href="/stream">
+            <button>视频查看</button>
+        </a>
+    </div>
 
+</body>
+<script>
+
+</script>
 </html>
