--- a/wws_and_jl/auth/templates/login.html
+++ b/wws_and_jl/auth/templates/login.html
@@ -6,11 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>登录</title>
   <!-- //todo 配置静态文件 -->
-  <link href="static/bootstrap.css" rel="stylesheet">
+  <link href="/static/bootstrap.min.css" rel="stylesheet">
   <link href="static/login.css" rel="stylesheet">
-  <!-- //todo 配置静态文件 -->
-  <script src="https://cdn.staticfile.org/jquery/3.4.0/jquery.min.js"></script>
-<!--  <script src="https://cdn.staticfile.org/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>-->
+
 </head>
 
 <body class="text-center">
@@ -20,6 +18,7 @@
     <input type="password" name="admin_confirm" id="admin_confirm"  class="form-control" placeholder="Password" required>
     <button class="btn btn-lg btn-primary btn-block" onclick="login()">Sign in</button>
   </div>
+  <script src="/static/jquery-3.5.1.min.js"></script>
 </body>
 <script>
     $(document).keydown(function (e) {
