--- a/wws_and_jl/collect/templates/main.html
+++ b/wws_and_jl/collect/templates/main.html
@@ -2,68 +2,172 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>主界面</title>
-  <!-- Bootstrap core CSS -->
-  <link href="/static/bootstrap.min.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>主界面</title>
+    <!-- Bootstrap core CSS -->
+    <link href="/static/bootstrap.min.css" rel="stylesheet">
 
-  <style>
-    body {
-      min-height: 75rem;
-      padding-top: 4.5rem;
-    }
-  </style>
+    <style>
+        body {
+            min-height: 75rem;
+            padding-top: 4.5rem;
+        }
+    </style>
 
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="/main.html">Fixed navbar</a>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="/main.html">门禁系统</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-      aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="nav nav-pills navbar-nav mr-auto" role="tablist">
-        <li class="nav-item">
-          <a class="nav-link active" data-toggle="pill" href="#home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="pill" href="#menu1">Menu 1</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="pill" href="#menu2">Menu 2</a>
-        </li>
-      </ul>
-      <form class="form-inline mt-2 mt-md-0" action="/auth/logout" method="get">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">安全退出</button>
-      </form>
+        <ul class="nav nav-pills navbar-nav mr-auto" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" data-toggle="pill" href="#camera">摄像头</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="pill" href="#manage">用户管理</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="pill" href="#log">系统日志</a>
+            </li>
+        </ul>
+        <div class="form-inline mt-2 mt-md-0">
+            <input class="form-control mr-md-2" type="text" placeholder="Search" aria-label="Search"
+                   list="search_list">
+            <datalist id="search_list">
+                <option value="Mark">
+                <option value="Jacob">
+                <option value="Larry">
+            </datalist>
+            <button class="btn btn-outline-success my-2 my-md-0">搜索</button>
+        </div>
+        <form class="form-inline mt-2 mt-md-0" action="/auth/logout" method="get">
+            <button class="btn btn-outline-secondary my-2 ml-md-2" type="submit">安全退出</button>
+        </form>
     </div>
-  </nav>
+</nav>
 
-  <div class="container">
+<div class="container">
     <!-- Tab panes -->
     <div class="tab-content">
-      <div id="home" class="container tab-pane active"><br>
-        <h3>HOME</h3>
-        <img src="{{ url_for('collect.video_feed') }}">
-      </div>
-      <div id="menu1" class="container tab-pane fade"><br>
-        <h3>Menu 1</h3>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </p>
-      </div>
-      <div id="menu2" class="container tab-pane fade"><br>
-        <h3>Menu 2</h3>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-          aperiam.</p>
-      </div>
-    </div>
-  </div>
+        <div id="camera" class="container tab-pane active"><br>
+            <h3>HOME</h3>
+            <img src="/video_feed">
+        </div>
+        <div id="manage" class="container tab-pane fade"><br>
+            <div class="card flex-row mb-4 shadow-sm h-md-250">
+                <div class="card-body d-flex flex-column align-items-start">
+                    <div id='user_name' class="text-primary">姓名</div>
+                    <div id='user_tel'>电话号码</div>
+                    <div id="'user_address">住址</div>
+                    <div class="btn-group mt-auto">
+                        <button type="button" class="btn btn-sm btn-outline-secondary"
+                                data-toggle="modal" data-target="#editModal">编辑</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">注销</button>
+                    </div>
+                </div>
+                <div>
+                    <img src="/static/imgTest.jpg" style="height: 200px; width: auto" title="点击修改头像">
+                </div>
 
-  <script src="/static/jquery-3.5.1.min.js"></script>
-  <script src="/static/bootstrap.bundle.min.js"></script>
+            </div>
+            <table class="table table-bordered">
+                <thead class="thead-dark">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">姓名</th>
+                    <th scope="col">电话</th>
+                    <th scope="col">住址</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Larry</td>
+                    <td>the Bird</td>
+                    <td>@twitter</td>
+                </tr>
+                </tbody>
+            </table>
+
+            <!-- Modal -->
+            <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                 aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="editModalLabel">用户信息编辑</h5>
+                            <button type="button" class="close" data-dismiss="modal">×</button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-group row">
+                                <label for="user_name_input" class="col-sm-2 col-form-label">姓名</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="user_name_input" placeholder="Name">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="user_tel_input" class="col-sm-2 col-form-label">电话</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="user_tel_input" placeholder="Tel">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="user_address_input" class="col-sm-2 col-form-label">住址</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="user_address_input"
+                                           placeholder="Address">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+                            <button type="button" class="btn btn-primary" onclick="test()">保存</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="log" class="container tab-pane fade"><br>
+            <h3>Menu 1</h3>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.
+            </p>
+        </div>
+    </div>
+</div>
+
+<script src="/static/jquery-3.5.1.min.js"></script>
+<script src="/static/bootstrap.bundle.min.js"></script>
 </body>
+<script>
+    function test() {
+        let name,tel,address
+        name = $('#user_name_input').val()
+        tel = $('#user_tel_input').val()
+        address = $('#user_address_input').val()
+        $('#user_name').html(name)
+        $('#user_tel').html(tel)
+        $('#user_address').html(address)
+        console.log('name:'+ name +' '+ 'tel:'+ tel +' '+ 'address:' +address)
+    }
+</script>
 
 </html>
