--- a/wws_and_jl/collect/templates/main.html
+++ b/wws_and_jl/collect/templates/main.html
@@ -61,62 +61,68 @@
             <img src="/video_feed">
         </div>
         <div id="manage" class="container tab-pane fade"><br>
-<!--            <div id="user_card" class="card flex-row mb-4 shadow-sm h-md-250" style="display: none">-->
-<!--                <div class="card-body d-flex flex-column col-8">-->
-<!--                    <div id='user_name' class="text-primary">姓名</div>-->
-<!--                    <div id='user_tel'>电话号码</div>-->
-<!--                    <div id='user_address'>住址</div>-->
-<!--                    <div class="btn-group mt-auto">-->
-<!--                        <button type="button" class="btn btn-sm btn-outline-secondary"-->
-<!--                                data-toggle="modal" data-target="#editModal">编辑-->
-<!--                        </button>-->
-<!--                        <button type="button" class="btn btn-sm btn-outline-secondary">注销</button>-->
-<!--                        <button type="button" class="btn btn-sm btn-outline-secondary" onclick="dis_select()">关闭-->
-<!--                        </button>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="card-body d-flex flex-row col-md-4">-->
-<!--                    <div class="flex-column col-3 col-md-2"></div>-->
-<!--                    <div >-->
-<!--                       <img id='user_img' src="/static/imgTest.jpg" class="w-100 h-auto" title="头像">-->
-<!--                    </div>-->
-<!--                    <div class="flex-column col-3 col-md-2"></div>-->
+            <!--            <div id="user_card" class="card flex-row mb-4 shadow-sm h-md-250" style="display: none">-->
+            <!--                <div class="card-body d-flex flex-column col-8">-->
+            <!--                    <div id='user_name' class="text-primary">姓名</div>-->
+            <!--                    <div id='user_tel'>电话号码</div>-->
+            <!--                    <div id='user_address'>住址</div>-->
+            <!--                    <div class="btn-group mt-auto">-->
+            <!--                        <button type="button" class="btn btn-sm btn-outline-secondary"-->
+            <!--                                data-toggle="modal" data-target="#editModal">编辑-->
+            <!--                        </button>-->
+            <!--                        <button type="button" class="btn btn-sm btn-outline-secondary">注销</button>-->
+            <!--                        <button type="button" class="btn btn-sm btn-outline-secondary" onclick="dis_select()">关闭-->
+            <!--                        </button>-->
+            <!--                    </div>-->
+            <!--                </div>-->
+            <!--                <div class="card-body d-flex flex-row col-md-4">-->
+            <!--                    <div class="flex-column col-3 col-md-2"></div>-->
+            <!--                    <div >-->
+            <!--                       <img id='user_img' src="/static/imgTest.jpg" class="w-100 h-auto" title="头像">-->
+            <!--                    </div>-->
+            <!--                    <div class="flex-column col-3 col-md-2"></div>-->
 
-<!--                </div>-->
-<!--            </div>-->
-            <div id="user_card_edit" class="card flex-column flex-md-row mb-4 shadow-sm h-md-250" style="display: none" >
+            <!--                </div>-->
+            <!--            </div>-->
+            <div id="user_card_edit" class="card flex-column flex-md-row mb-4 shadow-sm h-md-250" style="display: none">
                 <div class="card-body d-flex flex-column col-md-8">
-                    <div class="form-group row">
-                        <label for="user_name_edit" class="col-sm-2 col-form-label">姓名</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="user_name_edit" placeholder="Name">
+
+                        <div class="form-group row">
+                            <label for="user_name_edit" class="col-sm-2 col-form-label">姓名</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control"  id="user_name_edit" placeholder="Name">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="user_tel_edit" class="col-sm-2 col-form-label">电话</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="user_tel_edit" placeholder="tel">
+                        <div class="form-group row">
+                            <label for="user_tel_edit" class="col-sm-2 col-form-label">电话</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control"  id="user_tel_edit" placeholder="tel">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="user_address_edit" class="col-sm-2 col-form-label">住址</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="user_address_edit" placeholder="Address">
+                        <div class="form-group row">
+                            <label for="user_address_edit" class="col-sm-2 col-form-label">住址</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control"  id="user_address_edit" placeholder="Address">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="user_img_edit" class="col-sm-2 col-form-label">头像</label>
-                        <div class="col-sm-10">
-                            <input type="file" accept="image/jpeg,image/png" class="form-control-file" id="user_img_edit">
+                        <div class="form-group row">
+                            <label for="user_img_edit" class="col-sm-2 col-form-label">头像</label>
+                            <div class="col-sm-10">
+                                <input type="file" accept="image/jpeg,image/png" class="form-control-file"
+                                        id="user_img_edit">
+                            </div>
                         </div>
 
-                    </div>
+
 
                     <div class="btn-group mt-auto">
+                        <button type="button" class="btn btn-sm btn-outline-secondary" onclick="get_user_list()">test
+                        </button>
                         <button type="button" class="btn btn-sm btn-outline-secondary">保存修改</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">注册为新用户</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary" onclick="add_user()">注册为新用户</button>
                         <button type="button" class="btn btn-sm btn-outline-secondary">注销该用户</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary" onclick="dis_select()">关闭该面板</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary" onclick="dis_select()">关闭该面板
+                        </button>
                     </div>
                 </div>
                 <div class="card-body d-flex flex-row col-md-4">
@@ -137,7 +143,7 @@
                     <th scope="col">住址</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody id="user_list">
                 <tr>
                     <th scope="row">1</th>
                     <td>Mark</td>
@@ -213,9 +219,9 @@
     current_tr = ''
     current_name = ''
 
-    $('#user_img_edit').change(function(){
+    $('#user_img_edit').change(function () {
         console.log($(this))
-        $('#user_img_update').attr('src',URL.createObjectURL($(this)[0].files[0]));
+        $('#user_img_update').attr('src', URL.createObjectURL($(this)[0].files[0]));
 
     });
 
@@ -287,6 +293,124 @@
             }
             i++
         }
+    }
+
+    function get_user_list() {
+        $.ajax({
+            type: 'POST',
+            url: '/data/get_user_list',
+            success: rep_data => {
+                let user_list = rep_data['user_list']
+                if (user_list.length === 0) {
+                    $('#user_table').hide()
+                    $('#user_card_edit').show()
+                    return
+                }
+                for (let i = 0; i < user_list.length; i++) {
+                    let name = '', tel = '', address = ''
+                    name = user_list[i]['user_name']
+                    tel = user_list[i]['user_tel']
+                    address = user_list[i]['user_address']
+                    str += `<tr><th scope="row">${i}</th><td>${name}</td><td>${tel}</td><td>${address}</td></tr>`
+                    $('#user_list').html('')
+                    $('#user_list').html(str)
+                }
+            }
+        })
+    }
+
+    function add_user() {
+        console.log($('#user_img_edit')[0].files[0])
+        console.log($('#myForm').serialize())
+        let name,tel,address
+        name = $('#user_name_edit').val().trim()
+        tel = $('#user_tel_edit').val().trim()
+        address = $('#user_address_edit').val().trim()
+        if(name === ''){
+            alert('请填写姓名')
+            return
+        }
+        if(tel === ''){
+            alert('请填写电话')
+            return
+        }
+        if(address === ''){
+            alert('请填写住址')
+            return
+        }
+        if($('#user_img_edit').val() === ''){
+            alert('请添加头像')
+            return
+        }
+        let formData = new FormData()
+        formData.append('user_name',name)
+        formData.append('user_tel',tel)
+        formData.append('user_address',address)
+        formData.append('user_img',$('#user_img_edit')[0].files[0])
+        $.ajax({
+            type: 'POST',
+            url: '/data/add_user',
+            data: formData,
+            processData: false,
+            success: rep_data => {
+                if (data['flag'] == 0) {
+                    alert('更新成功')
+                } else {
+                    alert("注册用户失败")
+                }
+            }
+        })
+    }
+
+    function update_user() {
+        let raw_name,raw_tel,raw_address
+        let name,tel,address,pic
+        raw_name = $(current_tr).find('td').eq(0).html()
+        raw_tel = $(current_tr).find('td').eq(1).html()
+        raw_address = $(current_tr).find('td').eq(2).html()
+        name = $('#user_name_edit').val().trim()
+        tel = $('#user_tel_edit').val().trim()
+        address = $('#user_address_edit').val().trim()
+        if(raw_name === name){
+            name = ''
+        }
+        if(raw_tel === tel){
+            tel = ''
+        }
+        if(raw_address === address){
+            address = ''
+        }
+        if($('#user_img_edit').val() === ''){
+            pic = ''
+        }
+        if(name === '' && tel === '' && address === '' && pic === ''){
+            alert('请先进行修改')
+            return
+        }
+        let formData = new FormData()
+        formData.append('raw_user_name',raw_name)
+        formData.append('user_name',name)
+        formData.append('user_tel',tel)
+        formData.append('user_address',address)
+        if(pic !== ''){
+            formData.append('user_img',$('#user_img_edit')[0].files[0])
+        }
+        $.ajax({
+            type: 'POST',
+            url: '/data/update_user',
+            data: formData,
+            processData: false,
+            success: rep_data => {
+                if (data['flag'] == 0) {
+                    alert('更新成功')
+
+                } else {
+                    alert("注册用户失败")
+                }
+            }
+        })
+
+
     }
 
 </script>
