修正了数据库关闭的错误，图片路径问题

--- a/wws_and_jl/collect/templates/main.html
+++ b/wws_and_jl/collect/templates/main.html
@@ -265,7 +265,7 @@
         $('#user_name_edit').val(name)
         $('#user_tel_edit').val(tel)
         $('#user_address_edit').val(address)
-        $('#user_img_update').attr('src', '/collect/pictures/' + name + '.jpeg')
+        $('#user_img_update').attr('src', '/data/picture/' + name)
         $('#user_card_edit').show()
     }
 
