--- a/wws_and_jl/collect/templates/main.html
+++ b/wws_and_jl/collect/templates/main.html
@@ -127,7 +127,7 @@
                     </div>
                     <div class="card-body d-flex flex-row col-md-4">
                         <div class="flex-column col-3 col-md-2"></div>
-                        <div class="w-100 h-100 bg-primary">
+                        <div class="w-100 h-100 ">
                             <img id='user_img_update' src="" class="w-100 h-auto" alt="pic">
                         </div>
                         <div class="flex-column col-3 col-md-2"></div>
