--- a/wws_and_jl/collect/templates/main.html
+++ b/wws_and_jl/collect/templates/main.html
@@ -204,10 +204,37 @@
                 </div>
             </div>
             <div id="log" class="container tab-pane fade"><br>
-                <h3>Menu 1</h3>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.
-                </p>
+                <table id='record_table' class="table table-bordered">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">姓名</th>
+                            <th scope="col">操作</th>
+                            <th scope="col">时间</th>
+                        </tr>
+                    </thead>
+                    <tbody id="cord_list" title="系统日志">
+                        <!--                <tr>-->
+                        <!--                    <th scope="row">1</th>-->
+                        <!--                    <td>Mark</td>-->
+                        <!--                    <td>110</td>-->
+                        <!--                    <td>武汉</td>-->
+                        <!--                </tr>-->
+                        <!--                <tr>-->
+                        <!--                    <th scope="row">2</th>-->
+                        <!--                    <td>Jacob</td>-->
+                        <!--                    <td>111</td>-->
+                        <!--                    <td>耒阳</td>-->
+                        <!--                </tr>-->
+                        <!--                <tr>-->
+                        <!--                    <th scope="row">3</th>-->
+                        <!--                    <td>Larry</td>-->
+                        <!--                    <td>120</td>-->
+                        <!--                    <td>上海</td>-->
+                        <!--                </tr>-->
+                    </tbody>
+                </table>
+
             </div>
         </div>
     </div>
@@ -442,6 +469,28 @@
                 } else {
                     alert("失败")
                 }
+            }
+        })
+    }
+
+    function get_record_list() {
+        $.ajax({
+            type: 'POST',
+            url: '/data/get_record_list',
+            success: rep_data => {
+                let record_list = rep_data['record_list']
+                if (record_list.length === 0) {
+                    $('#record_table').hide()
+                    return
+                }
+                let str = '';
+                for (let i = 0; i < record_list.length; i++) {
+                    let name = '', time = ''
+                    name = record_list[i]['name']
+                    time = record_list[i]['time']
+                    str += `<tr><th scope="row">${i}</th><td>${name}</td><td>${time}</td></tr>`
+                }
+                $('#record_list').html(str)
             }
         })
     }
