--- a/wws_and_jl/collect/templates/main.html
+++ b/wws_and_jl/collect/templates/main.html
@@ -33,10 +33,10 @@
                     <a class="nav-link" data-toggle="pill" href="#manage" onclick="get_user_list()">用户管理</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="pill" href="#log">系统日志</a>
+                    <a class="nav-link" data-toggle="pill" href="#log" onclick="get_record_list()">系统日志</a>
                 </li>
             </ul>
-            <div class="form-inline mt-2 mt-md-0">
+            <div class=" form-inline mt-2 mt-md-0">
                 <input id='user_search_input' class="form-control mr-md-2" type="text" placeholder="Search"
                     aria-label="Search" list="search_list">
                 <datalist id="search_list">
