--- a/wws_and_jl/collect/templates/main.html
+++ b/wws_and_jl/collect/templates/main.html
@@ -209,11 +209,10 @@
                         <tr>
                             <th scope="col">#</th>
                             <th scope="col">姓名</th>
-                            <th scope="col">操作</th>
                             <th scope="col">时间</th>
                         </tr>
                     </thead>
-                    <tbody id="cord_list" title="系统日志">
+                    <tbody id="record_list" title="系统日志">
                         <!--                <tr>-->
                         <!--                    <th scope="row">1</th>-->
                         <!--                    <td>Mark</td>-->
